src/apps/callflows/submodules/timeofday/timeofday.css
.callflows-port #timeofday-form {
	color: #EBEBEB;
}

.callflows-port #timeofday-form .time-wrapper-field {
	height: 50px;
	padding: 10px 20px 0 0;
}

.callflows-port #timeofday-form #days_checkboxes .fake_checkbox {
	float: left;
	color: #303039;
	width: 31px;
	height: 25px;
	line-height: 25px;
	text-align: center;
	padding: 0;
	margin: 0;
	border-top: 1px solid #000000;
	border-bottom: 1px solid #000000;
	border-right: 1px solid #000000;
	background-color: white;
	cursor: pointer;
}

.callflows-port #timeofday-form #days_checkboxes .fake_checkbox:first-child {
	border-left: 1px solid #303039;
	border-radius: 5px 0 0 5px;
}

.callflows-port #timeofday-form #days_checkboxes .fake_checkbox:last-child {
	border-radius: 0 5px 5px 0;
}

.callflows-port #timeofday-form #days_checkboxes .fake_checkbox:hover {
	background-color: #22A5FF;
	color: white;
}

.callflows-port #timeofday-form #days_checkboxes .fake_checkbox.checked {
	background-color: #05ADDC;
	color: white;
}

.callflows-port #timeofday-form .time-wrapper label.monster-invalid {
	margin-top: 0;
	position: absolute;
}

.callflows-port #timeofday-form .time-wrapper-field .time-wrapper {
	width: 233px;
	padding: 0;
	margin: 0 0 0 20px;
	float: left;
}

.callflows-port #timeofday-form .time-wrapper-field .checkbox-container {
	float: left;
	margin-left: 20px;
}


.callflows-port #timeofday-form .time-wrapper-field .checkbox-container label.monster-checkbox {
	text-align: left;
	padding-top: 0;
	margin-top: 5px;
}

.callflows-port #timeofday-form .timepicker:first-child {
	margin-left: 0;
}

.callflows-port #timeofday-form .timepicker {
	width: 80px;
	margin: 0 10px;
}

